# Lesson1

./: CMakeLists.txt  Lists.cpp  Lists.h  README.md  binaryWord.cpp  binaryWord.h  main.cpp  testGenerator.cpp  testGenerator.h  vlad lox.xlsx
source/: Lists.cpp  Lists.h  arrayRealisation.cpp  arrayRealisation.h  binaryWord.cpp  binaryWord.h  consts.h  main.cpp  testGenerator.cpp  testGenerator.h
