cmake_minimum_required(VERSION 3.10)
project(Lesson1)

set(CMAKE_CXX_STANDARD 11)

add_executable(Lesson1 source/main.cpp source/Lists.h source/Lists.cpp source/binaryWord.cpp source/binaryWord.h source/testGenerator.cpp source/testGenerator.h source/arrayRealisation.cpp source/arrayRealisation.h source/consts.h)